linked materials: some data in nodes editable #37661

Closed
opened 2013-11-29 10:45:47 +01:00 by Michael Otto · 10 comments

System Information
Operating system and graphics card
Win7, GTX580

Blender Version
Broken: Blender 2.69 Release
Worked: ---

Short description of error
linked material datablocks with node tree: the values of curves and color ramps (only positions) are editable (but of course not saved)

Exact steps for others to reproduce the error
see files in zipped folder
Node-edit.zip

**System Information** Operating system and graphics card Win7, GTX580 **Blender Version** Broken: Blender 2.69 Release Worked: --- **Short description of error** linked material datablocks with node tree: the values of curves and color ramps (only positions) are editable (but of course not saved) **Exact steps for others to reproduce the error** see files in zipped folder [Node-edit.zip](https://archive.blender.org/developer/F34227/Node-edit.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelOtto

Added subscriber: @MichaelOtto
Lukas Tönne was assigned by Sergey Sharybin 2013-12-23 15:28:28 +01:00

Added subscribers: @LukasTonne, @Sergey

Added subscribers: @LukasTonne, @Sergey

@LukasTonne, do you feel like looking into this issue? :)

@LukasTonne, do you feel like looking into this issue? :)
Member

Generally the disabled buttons are a high-level layout feature, rather than a hard, low-level lock on data writing. You can edit virtually anything in linked data using the bpy API as well - these changes will just be ignored on writing .blend files. The disabled buttons are merely a helper to prevent confusion and lost time when editing such volatile linked data.

That being said, it would be nice to extend the disabled layout to the UI templates used for curve and color ramp widgets. Problem is that these are using old-school direct button drawing, which circumvents the "disabled" flag of the layout. Will check with other devs if disabling buttons and ui handlers based on layouts there is feasible.

Generally the disabled buttons are a high-level layout feature, rather than a hard, low-level lock on data writing. You can edit virtually anything in linked data using the bpy API as well - these changes will just be ignored on writing .blend files. The disabled buttons are merely a helper to prevent confusion and lost time when editing such volatile linked data. That being said, it would be nice to extend the disabled layout to the UI templates used for curve and color ramp widgets. Problem is that these are using old-school direct button drawing, which circumvents the "disabled" flag of the layout. Will check with other devs if disabling buttons and ui handlers based on layouts there is feasible.
Member
For reference: [implementation of the curve widget ui drawing](https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/interface/interface_templates.c;2654b28f046ea3a444717ebc7f36f9b5ef22f7f1$2014)

This issue was referenced by blender/blender-addons-contrib@95e153a319

This issue was referenced by blender/blender-addons-contrib@95e153a319b48a3a8d4fcb013b7be24fe1f07af3

This issue was referenced by 95e153a319

This issue was referenced by 95e153a319b48a3a8d4fcb013b7be24fe1f07af3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 95e153a319.

Closed by commit 95e153a319.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37661
No description provided.