Fix T37661: color ramps and curve mapping editing not disabled for linked data.